# ojae

./: .gitignore  CMakeLists.txt  Log.txt  OutputLog.txt  README.md  TODO.md  Test.cpp  TimeNotation.txt  ojae-test  ojae-test-2  test.txt
Garbaged Code/: Chest.h  DisplayWindow.cpp  DisplayWindow.h  Entity.cpp  Entity.h  InteractableObject.cpp  InteractableObject.h  Player.h  Tile.cpp  Tile.h  Tilemap.cpp
assets/: available_fonts.json  colors.json  monocraft_font.json  ojae_font.json
assets/Fonts/Monocraft/: monocraft_font.json
assets/Fonts/Ojae/: ojae_font.json
assets/Sprites/: Pallete.aseprite
data/: EntityPriorities  OjaePallete.json  Screen_Properties.json  available_fonts.json  colors.json  colors2.json  colors3.json  init.json  tag_defs.txt
include/ojae/: BaseWindow.h  Character.h  ColliderComponent.h  CollisionHandler.h  Color.h  CommonDefs.h  Component.h  Components.h  Debug.h  Debugger.h  Demo.h  Directory.h  DisplayWindow.h  ECS.h  Entity.h  EntityCopier.h  FileHandler.h  Heap.h  InputComponent.h  InputHandler.h  Item.h  Jloader.h  OJAsciiEngine.h  OJDemo.h  Player.h  Random.h  ScrollWindow.h  SmartVector.h  Sprite.h  SpriteComponent.h  Text.h  TextFunnel.h  TextRenderer.h  TextWindow.h  TextureHandler.h  Tile.h  Tilemap.h  TilemapLoader.h  TilemapWindow.h  TransformComponent.h  (+1 more)
include/ojae/Components/: AIMovementComponent.h  ColliderComponent.h  Components.h  DialogueComponent.h  SpriteComponent.h  TransformComponent.h
include/ojae/Objects/: Chest.h
include/ojae/Scripts/: AIRandomMovement.h  DeclareMove.h  PlayerInput.h  RandomMovement.h  Scripts.h  TrackEntity.h
src/: BaseWindow.cpp  Debugger.cpp  Demo.cpp  DisplayWindow.cpp  Entity.cpp  FileHandler.cpp  InputHandler.cpp  OJAsciiEngine.cpp  OJDemo.cpp  Player.cpp  TextFunnel.cpp  TextRenderer.cpp  TextWindow.cpp  TextureHandler.cpp  Tilemap.cpp  TilemapWindow.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  main_input.cpp  temp.txt
